--- a/demo1_css/index.html
+++ b/demo1_css/index.html
@@ -1,18 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet/less" type="text/css" href="stylesheet/styles.less" />
-    <script src="https://cdn.jsdelivr.net/npm/less@4" ></script>
-  
+    <script src="https://cdn.jsdelivr.net/npm/less@4"></script>
+
     <title>ma's demo1</title>
 </head>
-<body>
-<div>
-aaa
-</div>
-<div>
 
-</div>
+<body>
+    <div class="dv_1">
+        <div class="row_1">
+            <div class="tg_1">1</div>
+            <div class="txt_1">选择家人</div>
+            <div class="txt_2">（被保人）</div>
+        </div>
+        <img class="img_1" src="image/youhui.png">
+        <div class="family_1">
+            <div class="user_info">
+                <img class="head_1" src="image/man.png">
+                <div class="name_tag_remark">
+                    <div class="name_tag">
+                        <div class="name_1">*大锤</div>
+                        <div class="tg_2">本人</div>
+                    </div>
+                    <div class="remark_1">有保障，家人更安心</div>
+                </div>
+            </div>
+            <img class="img_2" src="image/Oval2.png">
+
+        </div>
+        <div class="family_1">
+            <div class="user_info">
+                <img class="head_1" src="image/man.png">
+                <div class="name_tag_remark">
+                    <div class="name_tag">
+                        <div class="name_1">配偶</div>
+                    </div>
+                    <div class="remark_1">给TA保障，更贴心</div>
+                </div>
+            </div>
+            <img class="img_2" src="image/Oval2.png">
+
+        </div>
+        <div class="family_1">
+            <div class="user_info">
+                <img class="head_1" src="image/man.png">
+                <div class="name_tag_remark">
+                    <div class="name_tag">
+                        <div class="name_1">父母</div>
+                    </div>
+                    <div class="remark_1">给父母保障，更放心</div>
+                </div>
+            </div>
+            <img class="img_2" src="image/Oval2.png">
+
+        </div>
+        <div class="family_1">
+            <div class="user_info">
+                <img class="head_1" src="image/man.png">
+                <div class="name_tag_remark">
+                    <div class="name_tag">
+                        <div class="name_1">子女</div>
+                    </div>
+                    <div class="remark_1">给孩子保障，更省心</div>
+                </div>
+            </div>
+            <img class="img_2" src="image/Oval2.png">
+
+        </div>
+    </div>
+    <div class='dv_1'>
+        <div class="row_1">
+            <div class="tg_1">2</div>
+            <div class="txt_1">保费支付</div>
+        </div>
+        <div class="row_2">
+            <div class="pay_1">
+                    <img class="corner_1" src="image/corner1.png">
+                    <div class="txt_3">
+                    按月支付<br>
+                    （12期）
+                    </div>
+
+        </div>
+            <div class="pay_2">一次交清</div>
+
+    </div>
+    <div class="row_3">
+        <div class="pay_3">每月保费</div>
+        <div class="pay_3">¥25.76/月起 共12期</div>
+
+    </div>
+    <div class="row_3">
+        <div class="pay_3">支付方式</div>
+        <div class="pay_4">
+            <img class="wx_1"  src="image/wx.png">
+            微信
+            <div class="array_1">></div>
+        </div>
+
+    </div>
+    <div class="txt_4">
+        *保费与被保人年龄情况相关，详情见<p style="color: #FF901B;">《费率表》</p>
+    </div>
 </body>
+
 </html>
